# HalfSat

./: .gitignore  compile_commands.json  platformio.ini  sense_sdkconfig.defaults
lib/: cam_link_proto.h  cam_link_transport.h  spi_cam_link_proto.h
lib/ssdv/: library.json  ssdv.c
lora_e5_rx/: Cargo.toml  build.rs
lora_e5_rx/native/: ssdv_wrap.c
lora_e5_rx/src/: main.rs  radio.rs  ssdv_native.rs
lora_ssdv_tx/: platformio.ini
lora_ssdv_tx/src/: cam_link_transport.cpp  jpegs_embedded.h  main.cpp  spi_master_link.cpp  spi_master_link.h
sense_camera_http/: platformio.ini
sense_camera_http/src/: cam_export_link.cpp  cam_export_link.h  camera_sense.cpp  camera_sense.h  main.cpp  sd_wait_saves.cpp  sd_wait_saves.h  spi_slave_link.cpp  spi_slave_link.h  uart_slave_link.cpp  uart_slave_link.h
