[package]
name = "lora_e5_rx"
version = "0.1.0"
edition = "2021"
description = "LoRa-E5 Mini P2P RX: egui live log + AT serial"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
image = "0.25"
serialport = "4.3"

[build-dependencies]
cc = "1.2"
